[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "Traffic Light"
version = "0.1.0"
description = "🚦 Beautiful traffic logging for PGO"
authors = ["Malte <ccev@github.com>"]
readme = "README.md"
packages = [{include = "trafficlight"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.0"
msgpack = "^1.0.4"
requests = "^2.28.1"
bbpb = "^1.0.0"
protobuf = "^3.20.3"
Pygments = "2.13.0"
rtoml = "0.8.0"
pydantic = "1.10.2"
pyperclip = "1.8.2"
"discord.py" = "^2.0.1"
textual = "^0.2.1"

[tool.poetry.scripts]
trafficlight = "trafficlight.trafficlight:run"


[tool.black]
line-length = 120

