[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "TrafficLight"
version = "0.1.1"
description = "🚦 Beautiful traffic logging for PGO"
authors = ["Malte <ccev@github.com>"]
readme = "README.md"
packages = [{include = "trafficlight"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.0"
msgpack = "^1.0.4"
requests = "^2.28.1"
bbpb = "^1.0.0"
Pygments = "2.13.0"
rtoml = "0.8.0"
pydantic = "1.10.2"
pyperclip = "1.8.2"
"discord.py" = "^2.0.1"
protobuf = "3.20.3"
mypy = "^0.991"
thefuzz = {extras = ["speedup"], version = "^0.19.0"}
click = "^8.1.3"
textual = "^0.9.1"


[tool.poetry.scripts]
trafficlight = "trafficlight.cli:cli"


[tool.black]
line-length = 120

